--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = "~=3.2.5"
 djangorestframework = "~=3.12.4"
 psycopg2-binary = "==2.9.1"
+django-cors-headers = "==3.7.0"
 
 [requires]
 python_version = "3.9"
